fix: hide scrollbar where it needs to be hidden for other browsertypes

--- a/public/main.css
+++ b/public/main.css
@@ -314,8 +314,13 @@ button:active{
     top: 0;
     right: 0;
     overflow-x: scroll;
-    scrollbar-width: none;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
     width: 100%;
+}
+
+.video-overlay::-webkit-scrollbar {
+    display: none; /* Chrome */
 }
 
 .button-video-toggle-size {
@@ -528,8 +533,8 @@ button:active{
 }
 
 #player-online-list::-webkit-scrollbar {
-    display: none; /*chrome*/
-  }
+    display: none;  /* Chrome*/
+}
 
 #player-online-list .player-state {
     width: 100%;
@@ -768,7 +773,11 @@ button:active{
     display: inline-grid;
     width: 100%;
     overflow-y: scroll;
-    scrollbar-width: none;
+    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+}
+#chat-list li::-webkit-scrollbar {
+    display: none; /* Chrome */
 }
 #chat-list i {
     margin: 3px;
